continued level creation

--- a/MarbleUE4_11/Config/DefaultEngine.ini
+++ b/MarbleUE4_11/Config/DefaultEngine.ini
@@ -16,9 +16,11 @@ GlobalDefaultServerGameMode=None
 
 
 
+
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_RollingBP",NewGameName="/Script/MarbleUE4_11")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_RollingBP",NewGameName="/Script/MarbleUE4_11")
+
 
 [/Script/Engine.UserInterfaceSettings]
 RenderFocusRule=NavigationOnly
@@ -78,4 +80,5 @@ AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Scalable
 AppliedDefaultGraphicsPerformance=Scalable
 
-
+ [/Script/Engine.Engine]
+ UnrealEdEngine=/Script/VictoryEdEngine.VictoryEdEngine
