--- a/MarbleUE4_11/MarbleUE4_11.uproject
+++ b/MarbleUE4_11/MarbleUE4_11.uproject
@@ -7,6 +7,11 @@
 		{
 			"Name": "Substance",
 			"Enabled": true
+		},
+		{
+			"Name": "VictoryBPLibrary",
+			"Enabled": true,
+			"MarketplaceURL": "http://www.ue4code.com"
 		}
 	]
 }
